--- a/html/controller.html
+++ b/html/controller.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="../css/controller.css" />
+    <script src="../js/controller.js" defer></script>
   </head>
   <body>
     <h1>Controller</h1>
+    <div style="width: 100%;">
+      <input type="range" min=0 max=100 />
+    </div>
+    <div style="display: flex; width: 100%;">
+      <div style="flex: 1;">
+        <button>Play 0</button>
+      </div>
+      <div style="flex: 1;">
+        <button>Play 1</button>
+      </div>
+    </div>
   </body>
 </html>
