--- a/html/display.html
+++ b/html/display.html
@@ -1,27 +1,12 @@
 <html>
 <head>
     <title>Tube VJ</title>
-    <style>
-    </style>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <link rel="stylesheet" href="../css/display.css" />
-    <script src="../js/display.js"></script>
+    <script src="../js/display.js" async></script>
 </head>
 <body>
-    <iframe
-        width="100%"
-        height="100%"
-        src="https://www.youtube.com/embed/B_qCnjitny0"
-        frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-    ></iframe>
-    <iframe
-        width="100%"
-        height="100%"
-        src="https://www.youtube.com/embed/Lx0N27LTwYg"
-        frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-    ></iframe>
+    <div id="player-0" class="player"></div>
+    <div id="player-1" class="player"></div>
     <div id="overlay"></div>
 </body>
